--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -111,7 +111,7 @@ div.mainlogo figure img {
     margin-left: 40%; 
 
 }
-div.mainlogo button{
+div.enlace{
     position: relative;
     margin-left: 40%;
     width: 20%;
@@ -124,15 +124,16 @@ div.mainlogo button{
     -o-border-radius: 20px;
     text-align: center;
     padding-top: 1vh;
+    border: solid white 2px;
     
 }
-button a {
+div.enlace a{
     color: white;
     font-family: "aller";
     font-size: 1.4em;
 }
 
-button:hover{
+div.enlace:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
@@ -144,13 +145,9 @@ button:hover{
     -ms-transition: 0.6s;
     -o-transition: 0.6s;
     text-decoration: none;
+    
 }
-button a:hover{
-    text-decoration: none;
-}
-div.spinner-grow{
-    margin-left: 48.5%;
-}
+
 
 
 #redesSociales ul{
