--- a/css/styleDetalleProd.css
+++ b/css/styleDetalleProd.css
@@ -157,10 +157,11 @@ article.curso video{
     margin-top: 2vh;
     margin-left: 2%;
 }
-section button{
+div.enlace{
 
     position: relative;
     margin-left: 40%;
+    margin-top: 1vh;
     width: 20%;
     height: 8vh;
     background-color: rgb(248, 147, 31);
@@ -169,6 +170,7 @@ section button{
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    border: solid white 2px;
     text-align: center;
     padding-top: 1vh;
     color: white ;
@@ -177,7 +179,11 @@ section button{
     
 
 }
-section button:hover{
+
+div.enlace a{
+    color:white;
+}
+div.enlace:hover{
     transform: scale(1.2) ;
     -webkit-transform: scale(1.2) ;
     -moz-transform: scale(1.2) ;
